added changes to references + env

--- a/app/.env
+++ b/app/.env
@@ -1,3 +1,5 @@
 pdfurl="https://az685612.vo.msecnd.net/pdfs/20w17/XC60_OwnersManual_MY21_en-GB_TP32005/XC60_OwnersManual_MY21_en-GB_TP32005.pdf"
 index="mechainic"
 dimension=1536
+OPENAI_API_KEY=""
+PINECONE_API_KEY=""
